--- a/Flutterx.html
+++ b/Flutterx.html
@@ -1,55 +1,48 @@
-//
-// Super simple thumbnails view
-//
-import 'package:flutter/material.dart';
-import 'package:pdfrx/pdfrx.dart';
+/// Page reading order; true to L-to-R that is commonly used by books like manga or such
+var isRightToLeftReadingOrder = false;
+/// Use the first page as cover page
+var needCoverPage = true;
 
-class ThumbnailsView extends StatelessWidget {
-  const ThumbnailsView(
-      {super.key, required this.documentRef, required this.controller});
+...
 
-  final PdfDocumentRef? documentRef;
-  final PdfViewerController? controller;
+layoutPages: (pages, params) {
+  final width = pages.fold(
+      0.0, (prev, page) => max(prev, page.width));
 
-  @override
-  Widget build(BuildContext context) {
-    return Container(
-      color: Colors.grey,
-      child: documentRef == null
-          ? null
-          : PdfDocumentViewBuilder(
-              documentRef: documentRef!,
-              builder: (context, document) => ListView.builder(
-                itemCount: document?.pages.length ?? 0,
-                itemBuilder: (context, index) {
-                  return Container(
-                    margin: const EdgeInsets.all(8),
-                    height: 240,
-                    child: Column(
-                      children: [
-                        SizedBox(
-                          height: 220,
-                          child: InkWell(
-                            onTap: () => controller!.goToPage(
-                              pageNumber: index + 1,
-                              anchor: PdfPageAnchor.top,
-                            ),
-                            child: PdfPageView(
-                              document: document,
-                              pageNumber: index + 1,
-                              alignment: Alignment.center,
-                            ),
-                          ),
-                        ),
-                        Text(
-                          '${index + 1}',
-                        ),
-                      ],
-                    ),
-                  );
-                },
-              ),
-            ),
+  final pageLayouts = <Rect>[];
+  final offset = needCoverPage ? 1 : 0;
+  double y = params.margin;
+  for (int i = 0; i < pages.length; i++) {
+    final page = pages[i];
+    final pos = i + offset;
+    final isLeft = isRightToLeftReadingOrder
+        ? (pos & 1) == 1
+        : (pos & 1) == 0;
+
+    final otherSide = (pos ^ 1) - offset;
+    final h = 0 <= otherSide && otherSide < pages.length
+        ? max(page.height, pages[otherSide].height)
+        : page.height;
+
+    pageLayouts.add(
+      Rect.fromLTWH(
+        isLeft
+            ? width + params.margin - page.width
+            : params.margin * 2 + width,
+        y + (h - page.height) / 2,
+        page.width,
+        page.height,
+      ),
     );
+    if (pos & 1 == 1 || i + 1 == pages.length) {
+      y += h + params.margin;
+    }
   }
-}
+  return PdfPageLayout(
+    pageLayouts: pageLayouts,
+    documentSize: Size(
+      (params.margin + width) * 2 + params.margin,
+      y,
+    ),
+  );
+},
